# ScreenSticker

./: .gitignore  android_common.gradle  build.gradle.kts  exclude_other_version.gradle  gradle.properties  project_package_name_replace.kts  readme.md  settings.gradle
.github/workflows/: android-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_launcher_splash.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_launcher_splash.xml
app/src/main/res/drawable-v24/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_splash.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/main/res/values-night/: themes.xml
buildSrc/: build.gradle.kts
core-common/: build.gradle.kts
core-opengl/: build.gradle.kts
core-opengl/src/main/cpp/: CMakeLists.txt  native_color.cpp  native_color.h
core-resource/: build.gradle.kts
core-resource/src/main/assets/: call_icon.svga
core-resource/src/main/res/: .gitignore
core-resource/src/main/res/drawable-hdpi/: divider_translate_view.xml
core-resource/src/main/res/font/: metropolis.xml
core-resource/src/main/res/menu/: bottom_navigation_menu.xml
core-resource/src/main/res/values-ar/: strings.xml
core-ui/: build.gradle.kts
core-ui-recyclerview/: build.gradle.kts
core-ui-splitties/: build.gradle.kts
core-ui-viewpager2/: build.gradle.kts
doc/: read.md  stock.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+161 files in other folders)
